SQuirreL SQL Client Change Log
==============================


${squirrelsql.changelog.header}

Not yet released, available in our Subversion repository and in future snapshots and releases.
===============================================================================================

Enhancements:

About Dialog:
  Added a tab for displaying the status off all threads.

3463374: Ability to rename SQL Worksheet tabs through Session menu, tab's right mouse menu or shortcut shift F6. (Thanks to Vladislav Vavra for the patch.)

Hibernate Plugin:
 - Support of hql results that return plain values instead of mapped objects. Mixes of plain values mapped objects are supported, too.
 - Support of data changing hql statements.
 - Support for JDBC standard date/time/timestamp escape strings in hql queries. (String are parsed and converted to hql parameters).


DBCopy Plugin:
  - Offers a new menu item "Paste table as ..." that allows to change the pasted table's name.
    This function works if only a single table was copied.
  - Tables can now be pasted to arbitrary Schemas.
  - In the Plugin preferences the user may choose to append copied data to existing tables

Copy as INSERT-VALUES statement now works on almost any table not just on editable tables. If a table isn't in
  a Session scope ";" is used as statement separator instead of the separator defined in Session properties.


Swing Violation Detector Plugin:
  This new plugin will help to detect rule violations of the Swing programming model. The usage of this plugin is only recommonend for
  testers and developers.

Code Completion Plugin:
  The Code Completion Plugin's preferences allows to switch on CamelCase completion
  which is a common feature in many modern IDEs.
  CamelCase completion may be useful if a RDBMS supports capital and small letters in database object names.

Hibernate Plugin:
  - Redesign of HQL result display. Focus is now on displaying result objects instead of Hibernate generated SQL.